"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-08-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-58:
	  No source revision.
	  Documentation updated regarding cast2hac migration from cflat.
	  General global Makefile maintainence of cvsignore and distribution.  


2006-08-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-57:
	  cflat lvs -t bug fix: forgot to unroll the process-type-reference
		before passing it to the creator/allocator, duh.  
	  Updated test infrastructure for cflat-lvs-ing and added a few
		minimal test cases using templated type to demonstrate fix.  


2006-08-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-56:
	  prsim: added command 'assert-queue' to assert that 
		event queue is not empty, useful for test scripts for
		checking that deadlock did not occur after step [n].  
		Updated some test cases to use this.  


2006-08-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-55-merged-prsim-07-09:
	  Merge of -prsim-07 branch (revision -09).
	  Summary (prsim):
		committed old FIX_BOGUS_INTERFERENCE and
			ALLOW_UNSTABLE_DEQUEUE flags, now permanent.  
		Implemented fine-grain error-control, so the behavior on 
			{weak-,}{instability,interference} may be customized:
			policies are: ignore, warn, break.
		mode reset and mode run are now defined in terms of these.
		event-causality is now tracked *per value* per node
			to distinguish last arriving inputs of
			pull-up and pull-down transitions, 
			flag: PRSIM_SEPARATE_CAUSE_NODE_DIRECTION
		causes are now attributed upon event dequeue, not enqueue.
		'backtrace' command walks causal event history, 
			useful for critical path analysis in non-random mode,
			and QDI violations in random timing mode.  
	  Also wrote more descriptive usage() for each prsim command.

