@@ -1,5 +1,5 @@
 % "cast2hac/types.tex"
-%	$Id: types.tex,v 1.2 2006/06/27 02:33:11 fang Exp $
+%	$Id: types.tex,v 1.3 2006/08/17 01:02:12 fang Exp $
 
 \section{Types}
 \label{sec:types}
@@ -35,5 +35,6 @@ The new types \preal\ and \int\ are explained in the \hac\ language reference.
 For the purposes of migrating from \CAST, we restrict our attention
 in the rest of this document to \emph{processes}, 
 the only kind of user-defined metaclass in \CAST.  
-\hac supports data and channel metaclasses, which have no equivalent in \CAST.  
+\hac\ supports data and channel metaclasses, 
+which have no equivalent in \CAST.  
 Section~\ref{sec:definitions} describes the changes in defining processes.  
